--- a/roles/dockerproxy/tasks/main.yml
+++ b/roles/dockerproxy/tasks/main.yml
@@ -18,10 +18,15 @@
           image: ghcr.io/tecnativa/docker-socket-proxy:latest
           container_name: dockerproxy
           environment:
-            - CONTAINERS=1 # Allow access to viewing containers
-            - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
-            - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
-            - POST=0 # Disallow any POST operations (effectively read-only)
+            - LOG_LEVEL=debug
+            - POST=1
+            - CONTAINERS=1
+            - IMAGES=1
+            - INFO=1
+            - NETWORKS=1
+            - SERVICES=1
+            - TASKS=1
+            - VOLUMES=1
             - DISABLE_IPV6=1
           ports:
             - 2375:2375
