--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -43,7 +43,7 @@
           environment:
             - WUD_WATCHER_LOCAL_SOCKET=/var/run/docker.sock
             - WUD_WATCHER_NAMESERVERPI_HOST={{ nameserver_pi_ip }}
-            - WUD_WATCHER_AILABUM_HOST={{ ailab_um_ip }}
+            #- WUD_WATCHER_AILABUM_HOST={{ ailab_um_ip }}
             - WUD_TRIGGER_MQTT_MOSQUITTO_URL=mqtt://{{ mosquitto_address }}:{{ mosquitto_port }}
             - WUD_TRIGGER_MQTT_MOSQUITTO_HASS_ENABLED=true
             - WUD_REGISTRY_GHCR_TOKEN={{ gh_access_token }}
