--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -71,3 +71,6 @@ nextcloud_data_folder: "{{config_root}}/nextcloud"
 syncthing_config_folder: "{{config_root}}/syncthing/config"
 syncthing_data_folder: "{{config_root}}/syncthing/data"
 ring_mqtt_config_folder: "{{config_root}}/ring-mqtt"
+openwakeword_data_folder: "{{config_root}}/openwakeword"
+piper_data_folder: "{{config_root}}/piper"
+whisper_data_folder: "{{config_root}}/whisper"
