--- a/setup.yml
+++ b/setup.yml
@@ -65,3 +65,15 @@
     - { role: dmotte.disable_ipv6, become: yes, tags: ["ipv6"] }
     - { role: ollama, become: yes, tags: ["ollama"]}
     - { role: wolf, become: yes, tags: ["wolf"]}
+
+- hosts: mic-sattelites
+  roles:
+    - { role: pi, become: yes, tags: ["pi"] }
+    - { role: basic, become: yes, tags: ["basic"] }
+    - { role: geerlingguy.pip, become: yes, tags: ["docker"] }
+    - { role: geerlingguy.docker, become: yes, tags: ["docker"], vars: { docker_install_compose: true } }
+    - { role: dockercleanup, become: yes, tags: ["docker"] }
+    - { role: dockerhub, become: yes, tags: ["docker", "dockerhub"] }
+    - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
+    - { role: glances, become: yes, tags: ["glances"] }
+    - { role: mic-satellite, become: yes, tags: ["wyoming"] }
