--- a/roles/mic-satellite/Dockerfile
+++ b/roles/mic-satellite/Dockerfile
@@ -2,4 +2,4 @@
 FROM wyoming-satellite:latest
 
 # Install alsa-utils
-RUN apt-get -y update && apt-get install -y alsa-utils libasound2-plugins
+RUN apt-get -y update && apt-get install -y alsa-utils pulseaudio-utils libasound2-plugins
