--- a/roles/mic-satellite/templates/daemon.conf
+++ b/roles/mic-satellite/templates/daemon.conf
@@ -5,7 +5,7 @@ fail = yes
 # High-priority scheduling
 high-priority = yes
 realtime-scheduling = yes
-realtime-priority = 5
+realtime-priority = 9
 
 # Resample method
 resample-method = speex-float-1
@@ -19,12 +19,13 @@ scache-idle-time = 20
 default-sample-format = s16le
 default-sample-rate = 44100
 alternate-sample-rate = 48000
+default-sample-channels = 2
 
 # Buffering and latency settings
-default-fragments = 8
-default-fragment-size-msec = 30
+default-fragments = 4
+default-fragment-size-msec = 25
 
 # General settings
-enable-shm = yes
+enable-shm = no
 shm-size-bytes = 0  ; Setting to 0 means use the system default
 flat-volumes = no
