--- a/roles/mic-satellite/tasks/main.yml
+++ b/roles/mic-satellite/tasks/main.yml
@@ -110,22 +110,22 @@
     block: |
       load-module module-switch-on-connect
 
-      #load-module module-combine-sink
+      load-module module-combine-sink
 
       # Create the first effect sink (Pitch Shifter)
-      #load-module module-ladspa-sink sink_name=pitch_shifter_sink plugin=tap_pitch label=tap_pitch control=-4,0,-90,0 channels=2
+      load-module module-ladspa-sink sink_name=pitch_shifter_sink plugin=tap_pitch label=tap_pitch control=-4,0,-90,0 channels=2
 
       # Create the third effect sink (Reverb) chained to the second
-      #load-module module-ladspa-sink sink_name=reverb_sink sink_master=pitch_shifter_sink plugin=tap_reverb label=tap_reverb control=1500,0,-10,1,1,1,1,0 channels=2
+      load-module module-ladspa-sink sink_name=reverb_sink sink_master=pitch_shifter_sink plugin=tap_reverb label=tap_reverb control=1500,0,-10,1,1,1,1,0 channels=2
 
       # Create the fourth effect sink (Compressor) chained to the third
-      # load-module module-ladspa-sink sink_name=compressor_sink sink_master=reverb_sink plugin=sc4_1882 label=sc4 control=0,50,300,-20,4,2,5 channels=2
+      load-module module-ladspa-sink sink_name=compressor_sink sink_master=reverb_sink plugin=sc4_1882 label=sc4 control=0,50,300,-20,4,2,5 channels=2
 
       # Create the fifth effect sink (Delay) chained to the fourth
-      #load-module module-ladspa-sink sink_name=delay_sink sink_master=pitch_shifter_sink plugin=delay label=delay_5s control=0.016,0.5 channels=2
+      load-module module-ladspa-sink sink_name=delay_sink sink_master=compressor_sink plugin=delay label=delay_5s control=0.016,0.5 channels=2
 
       # Create the final combined sink (vader-sink) chained to the fifth
-      #load-module module-combine-sink sink_name=vader_sink slaves=delay_sink channels=2
+      load-module module-combine-sink sink_name=vader_sink slaves=delay_sink channels=2
 
       ### Enable Volume Ducking
       #load-module module-role-ducking trigger_roles=announce,phone,notification,event ducking_roles=any_role volume=33%
@@ -253,8 +253,10 @@
             - "Wohnzimmer Satellit Rick"
             - --mic-command
             - 'arecord -r 16000 -c 1 -f S16_LE -t raw'
+            - --snd-command-rate
+            - "48000"
             - --snd-command
-            - 'aplay -r 22050 -c 1 -f S16_LE -t raw'
+            - 'aplay -r 48000 -c 1 -f S16_LE -t raw'
             - --wake-uri
             - "tcp://porcupine1:10400"
             - --wake-word-name
@@ -266,6 +268,11 @@
             - extra-sounds/boop-741-mhz.wav
             - --timer-finished-wav
             - extra-sounds/clock-alarm.wav
+            - --mic-auto-gain
+            - "5"
+            - --mic-noise-suppression
+            - "2"
+            - --vad
             - "--debug"
         satellite-nabu:
           image: wyoming-satellite-extras:latest
@@ -289,8 +296,10 @@
             - "Wohnzimmer Satellit Nabu"
             - --mic-command
             - 'arecord -r 16000 -c 1 -f S16_LE -t raw'
+            - --snd-command-rate
+            - "48000"
             - --snd-command
-            - 'aplay -r 22050 -c 1 -f S16_LE -t raw'
+            - 'aplay -r 48000 -c 1 -f S16_LE -t raw'
             - --wake-uri
             - "tcp://porcupine1:10400"
             - --wake-word-name
@@ -302,6 +311,11 @@
             - extra-sounds/boop-741-mhz.wav
             - --timer-finished-wav
             - extra-sounds/clock-alarm.wav
+            - --mic-auto-gain
+            - "5"
+            - --mic-noise-suppression
+            - "2"
+            - --vad
             - "--debug"
         # satellite-darthvader:
         #   image: wyoming-satellite-extras:latest
@@ -327,8 +341,10 @@
         #     - "Wohnzimmer Satellit Vader"
         #     - --mic-command
         #     - 'arecord -r 16000 -c 1 -f S16_LE -t raw'
+        # .   - --snd-command-rate
+        #     - "48000"
         #     - --snd-command
-        #     - 'sh -c "PULSE_SINK=vader_sink aplay -r 22050 -c 1 -f S16_LE -t raw"'
+        #     - 'sh -c "PULSE_SINK=vader_sink aplay -r 48000 -c 1 -f S16_LE -t raw"'
         #     - --wake-uri
         #     - "tcp://openwakeword:10400"
         #     - --wake-word-name
@@ -340,6 +356,11 @@
         #     - extra-sounds/g2.wav
         #     - --timer-finished-wav
         #     - sounds/timer_finished.wav
+        #     - --mic-auto-gain
+        #     - "5"
+        #     - --mic-noise-suppression
+        #     - "2"
+        #     - --vad
         #     - "--debug"
         porcupine1:
           container_name: wyoming-porcupine1
@@ -367,10 +388,6 @@
         #     - "/custom"
         #     - --preload-model
         #     - Darth_Vader
-        #   #  - --preload-model
-        #   #  - hey_rick
-        #   #  - --preload-model
-        #   #  - hey_nabu_v2
         #   labels:
         #     - 'wud.tag.include=^\d+\.\d+\.\d+$$'
         #     - 'wud.link.template=https://github.com/rhasspy/wyoming-openwakeword/releases/tag/v$${major}.$${minor}.$${patch}'
